<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:animateLayoutChanges="true">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.productiville.addTask.AddTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fullAddView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/taskTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/set_title"
            android:inputType="textCapSentences"
            android:textAlignment="center"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskTitle" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/startDate"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="64dp"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startDate" />

        <TextView
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/endDate"
            app:layout_constraintEnd_toEndOf="parent" />

        <ca.antonious.materialdaypicker.MaterialDayPicker
            android:id="@+id/day_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/endDate" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/subTasks"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endDate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addSubTaskButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/subtask"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_add_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTasks" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createTaskButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginEnd="24dp"
            android:text="@string/create"
            app:cornerRadius="30dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancelButton"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/recurrenceEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="45dp"
            android:text="@string/forever"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_picker" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/countPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/occurrences"
            app:layout_constraintTop_toBottomOf="@+id/recurrenceEndDate" />

        <TextView
            android:id="@+id/repeat_until"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/repeat_until"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/recurrenceEndDate"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/or_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="40dp"
            android:text="@string/or_for"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeat_until" />

        <TextView
            android:id="@+id/occurrences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:text="@string/occurrences"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recurrenceEndDate" />

        <TextView
            android:id="@+id/addSomeSubTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_some_subtasks"
            app:layout_constraintBottom_toBottomOf="@+id/subTasks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/subTasks"
            android:textColor="@color/dimYellow"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/snackbarSwipeEnabler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>