<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.productiville.editTask.EditTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/taskTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/set_title"
            android:inputType="textCapSentences"
            android:textAlignment="center"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskTitle" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/startDate"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="64dp"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startDate" />

        <TextView
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/endDate"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/subTasks"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endTime" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addSubTaskButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/subtask"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_add_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTasks" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editTaskButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginEnd="24dp"
            android:text="@string/edit"
            app:cornerRadius="30dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancelButton"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/addSomeSubTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_some_subtasks"
            app:layout_constraintBottom_toBottomOf="@+id/subTasks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/subTasks"
            android:textColor="@color/dimYellow"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/snackbarSwipeEnabler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>