<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.productiville.weekly.WeeklyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/navFromWeekly"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/weekly_button"
            app:icon="@drawable/ic_calendar_today_black_36dp"
            app:iconGravity="textStart"
            android:textColor="@color/colorPrimary"
            app:iconTint="@color/colorPrimary"
            android:backgroundTint="#1A1A1A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/allDoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_done"
            app:layout_constraintBottom_toBottomOf="@+id/refresh_weekly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navFromWeekly"
            android:textColor="@color/dimYellow"
            android:visibility="gone"/>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh_weekly"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navFromWeekly">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/taskList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="true"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/snackbarSwipeEnabler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/addTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:layout_marginEnd="32dp"
            android:layout_gravity="bottom|end"
            android:text="@string/new_task"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:icon="@drawable/ic_add_black_24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>